==> MarlinFirmware/Marlin/Marlin/src/HAL/AVR/HAL_SPI_HW.cpp <==
#include "../../inc/MarlinConfig.h"
#include "registers.h"

  void spiBegin() {
    #if PIN_EXISTS(SD_SS)
      // Do not init HIGH for boards with pin 4 used as Fans or Heaters or otherwise, not likely to have multiple SPI devices anyway.
      #if defined(__AVR_ATmega644__) || defined(__AVR_ATmega644P__) || defined(__AVR_ATmega644PA__) || defined(__AVR_ATmega1284P__)
        // SS must be in output mode even if it is not chip select
        SET_OUTPUT(SD_SS_PIN);
      #else
        // set SS high - may be chip select for another SPI device
        OUT_WRITE(SD_SS_PIN, HIGH);
      #endif
    #endif
    // This could still be required because the specification says that the DDR of those pins is "User Defined".
    SET_OUTPUT(SD_SCK_PIN);
    SET_OUTPUT(SD_MOSI_PIN);

    // By default we disable the SPI peripheral.
    _PRR0._PRSPI = true;
  }

  void spiInitEx(uint32_t maxClockFreq, const int hint_sck/*=-1*/, const int hint_miso/*=-1*/, const int hint_mosi/*=-1*/, const int hint_cs/*=-1*/) {
    if (_spi_is_running)
      _spi_on_error(1);

    // In hardware SPI mode we can only use the pre-determined SPI pins for MISO, MOSI and SCK, thus ignore the first three pin hints.
    // But for the chip-select pin, we either have to go HW mode if it is the peripheral SPI pin or we can go SW if it is a GPIO.
    if ( _ATmega_getPinFunctions(hint_cs).hasFunc(eATmegaPinFunc::SPI_CS) ) {
      // HW SPI_CS
      _spi_cs_pin = -1;
    }
    else {
      // SW SPI_CS
      _spi_cs_pin = hint_cs;
    }

    // Clear the power-reduction.
    _PRR0._PRSPI = false;

    // Calculate the required division to run the SPI clock below maxClockFreq.
    uint32_t sysclk = _GetSystemClockFrequency();

    SPCR_reg_t __SPCR;
    __SPCR._SPIE = false;
    __SPCR._SPE = true;
    _spiConfigBitOrder(__SPCR, SPI_BITORDER_DEFAULT);
    __SPCR._MSTR = true;
    _spiConfigClockMode(__SPCR, SPI_CLKMODE_DEFAULT);

    if ((sysclk / 2) <= maxClockFreq) {
      _SPSR._SPI2X = true;
      __SPCR._SPR = 0;
    }
    else if ((sysclk / 4) <= maxClockFreq) {
      _SPSR._SPI2X = false;
      __SPCR._SPR = 0;
    }
    else if ((sysclk / 8) <= maxClockFreq) {
      _SPSR._SPI2X = true;
      __SPCR._SPR = 1;
    }
    else if ((sysclk / 16) <= maxClockFreq) {
      _SPSR._SPI2X = false;
      __SPCR._SPR = 1;
    }
    else if ((sysclk / 32) <= maxClockFreq) {
      _SPSR._SPI2X = true;
      __SPCR._SPR = 2;
    }
    else if ((sysclk / 64) <= maxClockFreq) {
      _SPSR._SPI2X = false;
      __SPCR._SPR = 2;
    }
    else {
      // Cannot go below it.
      _SPSR._SPI2X = false;
      __SPCR._SPR = 3;
    }

    // Write initial configuration.
    _SPCR = __SPCR;

    _spi_is_running = true;
    _spi_transaction_is_active = false;
    _spi_dirty_tx = false;
  }

  void spiClose() {
    if (_spi_is_running == false)
      _spi_on_error(2);

    _spi_finish_tx();

    if (_spi_transaction_is_active) {
      if (_spi_cs_pin >= 0)
        _ATmega_digitalWrite(_spi_cs_pin, HIGH);
      
      _spi_transaction_is_active = false;
    }

    // Disable the peripheral again.
    _PRR0._PRSPI = true;

    _spi_is_running = false;
  }

  void spiSetBitOrder(int bitOrder) {
    _spiConfigBitOrder(_SPCR, bitOrder);
  }

  void spiSetClockMode(int clockMode) {
    _spiConfigClockMode(_SPCR, clockMode);
  }

  uint8_t spiRec(uint8_t txval) {
    _maybe_start_transaction();
    _spi_finish_tx();
    _SPDR = txval;
    while (_SPSR._SPIF == false) { /* wait until data has been received */ }
    return _SPDR;
  }

  uint16_t spiRec16(uint16_t txval) {
    _maybe_start_transaction();
    bool msb = ( _SPCR._DORD == 0 );
    uint8_t tx_first, tx_second;
    _split_txbytes(txval, tx_first, tx_second, msb);
    _spi_finish_tx();
    _SPDR = tx_first;
    while (_SPSR._SPIF == false) { /* Intentionally left empty */ }
    uint8_t rx_first = _SPDR;
    _SPDR = tx_second;
    while (_SPSR._SPIF == false) { /* Intentionally left empty */ }
    uint8_t rx_second = _SPDR;
    return _fuse_txbytes(rx_first, rx_second, msb);
  }

  void spiRead(uint8_t *buf, uint16_t nbyte, uint8_t txval) {
    if (nbyte == 0) return;
    _maybe_start_transaction();
    nbyte--;
    _spi_finish_tx();
    _SPDR = txval;
    for (uint16_t i = 0; i < nbyte; i++) {
      while (_SPSR._SPIF == false) { /* do nothing */ }
      buf[i] = _SPDR;
      _SPDR = txval;
    }
    while (_SPSR._SPIF == false) { /* do nothing */ }
    buf[nbyte] = _SPDR;
  }

  void spiSend(uint8_t b) {
    _maybe_start_transaction();
    _spiSendByte(b);
  }

  void spiSend16(uint16_t v) {
    _maybe_start_transaction();
    bool msb = ( _SPCR._DORD == 0 );
    uint8_t tx_first, tx_second;
    _split_txbytes(v, tx_first, tx_second, msb);
    _spiSendByte(tx_first);
    _spiSendByte(tx_second);
  }

  void spiSendBlock(uint8_t token, const uint8_t *buf) {
    _maybe_start_transaction();
    _spiSendByte(token);
    for (uint16_t i = 0; i < 512; i++) {
      _spiSendByte(buf[i]);
    }
  }

  void spiWrite(const uint8_t *buf, uint16_t cnt) {
    _maybe_start_transaction();
    for (uint16_t n = 0; n < cnt; n++)
      _spiSendByte(n);
  }

  void spiWrite16(const uint16_t *buf, uint16_t cnt) {
    _maybe_start_transaction();
    bool msb = ( _SPCR._DORD == 0 );
    for (uint16_t n = 0; n < cnt; n++) {
      uint8_t tx_first, tx_second;
      _split_txbytes(buf[n], tx_first, tx_second, msb);
      _spiSendByte(tx_first);
      _spiSendByte(tx_second);
    }
  }

  void spiWriteRepeat(uint8_t val, uint16_t repcnt) {
    _maybe_start_transaction();
    for (uint16_t n = 0; n < repcnt; n++)
      _spiSendByte(val);
  }

  void spiWriteRepeat16(uint16_t val, uint16_t repcnt) {
    _maybe_start_transaction();
    bool msb = ( _SPCR._DORD == 0 );
    uint8_t tx_first, tx_second;
    _split_txbytes(val, tx_first, tx_second, msb);
    for (uint16_t n = 0; n < repcnt; n++) {
      _spiSendByte(tx_first);
      _spiSendByte(tx_second);
    }
  }
