==> MarlinFirmware/Marlin/Marlin/src/HAL/STM32/HAL_SPI_HW.cpp <==
#include "../platforms.h"
#include "../../inc/MarlinConfig.h"
#include "pinconfig.h"
#include "../shared/ARM/HAL_NVIC.h"
  #include "stm32f1xx_hal.h"
  #include "stm32f4xx_hal.h"
  #define HALSPI_LOOPBEEP_TIMEOUT 3000

  void spiBegin() {
    #if PIN_EXISTS(SD_SS)
      OUT_WRITE(SD_SS_PIN, HIGH);
    #endif

#if !(defined(STM32F1xx) || defined(STM32F4xx))
    memset(&SPIhx, 0, sizeof(SPIhx));
#endif
    //SPIhx.Instance                = spiInstance;
    SPIhx.State                   = HAL_SPI_STATE_RESET;
    SPIhx.Init.NSS                = SPI_NSS_SOFT;
    SPIhx.Init.Mode               = SPI_MODE_MASTER;
    //SPIhx.Init.Direction          = (TFT_MISO_PIN != NC && TFT_MISO_PIN == TFT_MOSI_PIN) ? SPI_DIRECTION_1LINE : SPI_DIRECTION_2LINES;
    //SPIhx.Init.BaudRatePrescaler  = clkdiv;
    //SPIhx.Init.CLKPhase           = SPI_PHASE_1EDGE;
    //SPIhx.Init.CLKPolarity        = SPI_POLARITY_LOW;
    _HAL_SPI_InitClock(SPI_CLKMODE_DEFAULT);
    //SPIhx.Init.DataSize           = SPI_DATASIZE_8BIT;
    SPIhx.Init.FirstBit           = SPI_FIRSTBIT_MSB;  // default.
    SPIhx.Init.TIMode             = SPI_TIMODE_DISABLE;
    SPIhx.Init.CRCCalculation     = SPI_CRCCALCULATION_DISABLE;
    SPIhx.Init.CRCPolynomial      = 10;

#if !(defined(STM32F1xx) || defined(STM32F4xx))
    memset(&DMAhx, 0, sizeof(DMAhx));
#endif
    DMAhx.Init.Direction = DMA_MEMORY_TO_PERIPH;  // target is SPI bus.
    //DMAhx.Init.MemInc = DMA_MINC_ENABLE;
    DMAhx.Init.PeriphInc = DMA_PINC_DISABLE;
    //DMAhx.Init.PeriphDataAlignment = DMA_PDATAALIGN_HALFWORD;
    //DMAhx.Init.MemDataAlignment = DMA_MDATAALIGN_HALFWORD;
    DMAhx.Init.Mode = DMA_NORMAL;
    DMAhx.Init.Priority = DMA_PRIORITY_LOW;
    #ifdef STM32F4xx
      DMAhx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
    #endif
  }

  void spiInitEx(uint32_t maxClockFreq, int hint_sck, int hint_miso, int hint_mosi, int hint_cs) {
    int use_pin_sck, use_pin_miso, use_pin_mosi, use_pin_cs;
    if (hint_sck != NC && hint_mosi != NC)
    {
      use_pin_sck = hint_sck;
      use_pin_miso = hint_miso;
      use_pin_mosi = hint_mosi;
    }
    else
    {
      use_pin_sck = SD_SCK_PIN;
      use_pin_miso = SD_MISO_PIN;
      use_pin_mosi = SD_MOSI_PIN;
    }
    use_pin_cs = hint_cs;

    PinName name_sck_pin = digitalPinToPinName(use_pin_sck);

    SPI_TypeDef *spiInstance = (SPI_TypeDef*)pinmap_peripheral(name_sck_pin, PinMap_SPI_SCLK);

    if (spiInstance != pinmap_peripheral(digitalPinToPinName(use_pin_mosi), PinMap_SPI_MOSI))
      _spiOnError();
    if (use_pin_miso != NC && spiInstance != pinmap_peripheral(digitalPinToPinName(use_pin_miso), PinMap_SPI_MISO))
      _spiOnError();

    // Barrier.
    _SPI_Enter( spiInstance );

    _spi_pin_sck = use_pin_sck;
    _spi_pin_miso = use_pin_miso;
    _spi_pin_mosi = use_pin_mosi;
    _spi_pin_cs = use_pin_cs;

    SPIhx.Instance = spiInstance;

    // chip-select is assumed to be handled by the software to be LOW during operations (if passed as -1 to spiInitEx)
    // the pin is being adjusted to HIGH when SPI is doing critical maintenance operations
    // (changing frame width, bit-ordering, etc).

    SPIhx.Init.Direction = (_spi_pin_miso == NC || _spi_pin_mosi == NC) ? SPI_DIRECTION_1LINE : SPI_DIRECTION_2LINES;

    uint8_t clkdiv;
    if (maxClockFreq > 0) {
      spi_t tmp_spi;
      tmp_spi.pin_sclk = name_sck_pin;
      uint32_t spibasefreq = spi_getClkFreq(&tmp_spi);
      clkdiv = _HAL_GetClockDivider( spibasefreq, maxClockFreq );
    }
    else
    {
      bool has_clkdiv = false;

#ifdef SPI1_BASE
      if (spiInstance == SPI1)
      {
        clkdiv = SPI_BAUDRATEPRESCALER_4;
        has_clkdiv = true;
      }
#endif

      if (!has_clkdiv)
      {
        clkdiv = SPI_BAUDRATEPRESCALER_2;
      }
    }

    SPIhx.Init.BaudRatePrescaler = clkdiv;

    _HAL_SPI_Prepare();

    _spi_is_initialized = false;
    _spi_is_transmit_sequence_initialized = false;
  }

  void spiClose() {
    // Shutdown the SPI peripheral.
    _spiSecureShutdown();

    // Close down hardware-related resources.
    _HAL_SPI_EndOfTransaction();
    _HAL_SPI_Dismantle();
    _SPI_Leave( SPIhx.Instance );
  }

  void spiSetBitOrder(int bitOrder) {
    if (bitOrder == SPI_BITORDER_MSB) {
      if (SPIhx.Init.FirstBit == SPI_FIRSTBIT_MSB) return;
      SPIhx.Init.FirstBit = SPI_FIRSTBIT_MSB;
    }
    else if (bitOrder == SPI_BITORDER_LSB) {
      if (SPIhx.Init.FirstBit == SPI_FIRSTBIT_LSB) return;
      SPIhx.Init.FirstBit = SPI_FIRSTBIT_LSB;
    }
  
    // If the SPI is already enabled, then update it.
    // When the SPI is initialized, the chip-select must be high aswell.
    if (_spi_is_initialized)
    {
      _spiSecureShutdown();

      auto tmp_SPI_CR1 = SPIhx.Instance->CR1;

      if (bitOrder == SPI_BITORDER_MSB)
        tmp_SPI_CR1 &= ~_BV(7);
      else
        tmp_SPI_CR1 |= _BV(7);

      SPIhx.Instance->CR1 = tmp_SPI_CR1;

      __HAL_SPI_ConfigDirection();
      __HAL_SPI_ENABLE(&SPIhx);

      _spi_is_transmit_sequence_initialized = false;

      _spiSecureCSLeave();
    }
  }

  void spiSetClockMode(int mode) {
    bool changed = _HAL_SPI_InitClock(mode);

    if (!changed) return;

    if (_spi_is_initialized) {
      _spiSecureShutdown();

      auto tmp_SPI_CR1 = SPIhx.Instance->CR1;

      if (mode == SPI_CLKMODE_0) {
        tmp_SPI_CR1 &= ~0x03;
      }
      else if (mode == SPI_CLKMODE_1) {
        tmp_SPI_CR1 &= ~0x02;
        tmp_SPI_CR1 |= 0x01;
      }
      else if (mode == SPI_CLKMODE_2) {
        tmp_SPI_CR1 &= ~0x01;
        tmp_SPI_CR1 |= 0x02;
      }
      else if (mode == SPI_CLKMODE_3) {
        tmp_SPI_CR1 |= 0x03;
      }

      SPIhx.Instance->CR1 = tmp_SPI_CR1;

      __HAL_SPI_ConfigDirection();
      __HAL_SPI_ENABLE(&SPIhx);

      _spi_is_transmit_sequence_initialized = false;

      _spiSecureCSLeave();
    }
  }

  void spiSend(uint8_t b) {
    if (_spi_pin_mosi == NC) return;
    _SPI_AsyncBarrier();
    _HAL_SPI_UpdateTransaction(SPI_DATASIZE_8BIT);
    _HAL_SPI_Transmit <uint8_t> (b);
  }

  void spiSend16(uint16_t v) {
    if (_spi_pin_mosi == NC) return;
    _SPI_AsyncBarrier();
    _HAL_SPI_UpdateTransaction(SPI_DATASIZE_16BIT);
    _HAL_SPI_Transmit <uint16_t> (v);
  }

  uint8_t spiRec(uint8_t txval) {
    if (_spi_pin_miso == NC) return 0;
    _SPI_AsyncBarrier();
    _HAL_SPI_UpdateTransaction(SPI_DATASIZE_8BIT);
    uint8_t res = _HAL_SPI_Receive <uint8_t> (txval);
    return res;
  }

  uint16_t spiRec16(uint16_t txval) {
    if (_spi_pin_miso == NC) return 0;
    _SPI_AsyncBarrier();
    _HAL_SPI_UpdateTransaction(SPI_DATASIZE_16BIT);
    uint16_t res = _HAL_SPI_Receive <uint16_t> (txval);
    return res;
  }

  void spiRead(uint8_t *buf, uint16_t bufsize, uint8_t txval) {
    if (_spi_pin_miso == NC) {
      memset(buf, 0, bufsize);
    }
    else {
      _SPI_AsyncBarrier();
      _HAL_SPI_UpdateTransaction(SPI_DATASIZE_8BIT);
      for (uint16_t n = 0; n < bufsize; n++)
        buf[n] = _HAL_SPI_Receive <uint8_t> (txval);
    }
  }

  void spiSendBlock(uint8_t token, const uint8_t *block) {
    if (_spi_pin_mosi == NC) return;
    _SPI_AsyncBarrier();
    _HAL_SPI_UpdateTransaction(SPI_DATASIZE_8BIT);
    _HAL_SPI_Transmit <uint8_t> (token);
    for (uint16_t n = 0; n < 512; n++)
      _HAL_SPI_Transmit <uint8_t> ( block[n] );
  }

  void spiWrite(const uint8_t *buf, uint16_t bufcnt) {
    if (_spi_pin_mosi == NC) return;
    if (bufcnt == 0) return;
    _SPI_AsyncBarrier();
    _HAL_DMA_Transfer( buf, bufcnt, true, SPI_DATASIZE_8BIT );
  }

  void spiWrite16(const uint16_t *buf, uint16_t bufcnt) {
    if (_spi_pin_mosi == NC) return;
    if (bufcnt == 0) return;
    _SPI_AsyncBarrier();
    _HAL_DMA_Transfer( buf, bufcnt, true, SPI_DATASIZE_16BIT );
  }

  void spiWriteRepeat(uint8_t val, uint16_t repcnt) {
    if (_spi_pin_mosi == NC) return;
    if (repcnt == 0) return;
    _SPI_AsyncBarrier();
    // If async then we would need a static variable here.
    _HAL_DMA_Transfer( &val, repcnt, false, SPI_DATASIZE_8BIT );
  }

  void spiWriteRepeat16(uint16_t val, uint16_t repcnt) {
    if (_spi_pin_mosi == NC) return;
    if (repcnt == 0) return;
    _SPI_AsyncBarrier();
    // If async then we would need a static variable here.
    _HAL_DMA_Transfer( &val, repcnt, false, SPI_DATASIZE_16BIT );
  }
